Use lazy loader module

--- a/packages/donation-form/demo/donate.html
+++ b/packages/donation-form/demo/donate.html
@@ -76,7 +76,7 @@
     import { RecaptchaManager } from '../lib/recaptcha-manager/recaptcha-manager.js';
     import { PaymentFlowHandlers } from '../lib/payment-flow-handlers/payment-flow-handlers.js';
 
-    import { LazyLoaderService } from '../lib/utilities/lazy-loader-service.js';
+    import { LazyLoaderService } from '@internetarchive/lazy-loader-service';
 
     import '../lib/modal-manager/modal-manager.js';
     import '../lib/donation-form.js';
