Adds upload URL config param

--- a/packages/ia-topnav/base64_encoded_menus.html
+++ b/packages/ia-topnav/base64_encoded_menus.html
@@ -40,6 +40,7 @@
         eventCategory: 'MobileTopNav',
         waybackPagesArchived: '424 billion',
         isAdmin: true,
+        uploadURL: 'https://archive.org/create',
         hiddenSearchOptions: [],
       };
       const menus = Object.assign({}, baseMenus, {
