--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -38,6 +38,7 @@
         eventCategory: 'MobileTopNav',
         waybackPagesArchived: '424 billion',
         isAdmin: true,
+        uploadURL: 'https://archive.org/create',
         hiddenSearchOptions: [],
       };
       const topnav = document.createElement('ia-topnav');
