Adds searchQuery property on config object

--- a/packages/ia-topnav/base64_encoded_menus.html
+++ b/packages/ia-topnav/base64_encoded_menus.html
@@ -41,6 +41,7 @@
         waybackPagesArchived: '424 billion',
         isAdmin: true,
         uploadURL: 'https://archive.org/create',
+        searchQuery: 'atari',
         hiddenSearchOptions: [],
       };
       const menus = Object.assign({}, baseMenus, {
