--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -39,6 +39,7 @@
         waybackPagesArchived: '424 billion',
         isAdmin: true,
         uploadURL: 'https://archive.org/create',
+        searchQuery: 'atari',
         hiddenSearchOptions: [],
       };
       const topnav = document.createElement('ia-topnav');
