Create js tests

--- a/packages/ia-zendesk-help-widget/index.html
+++ b/packages/ia-zendesk-help-widget/index.html
@@ -5,24 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="index.js"></script>
     <title>Zenddesk Help Widget</title>
-    <style>
-      ia-zendesk-help-widget {
-        --activeColor: var(--white);
-        --iconFill: var(--grey60);
-        --desktopSearchIconFill: var(--grey20);
-        --themeFontFamily: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      }
-    </style>
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module">
       import { html, render } from './node_modules/lit-html/lit-html.js';
 
       render(html`<ia-zendesk-help-widget
-      widgetSrc="https://static.zdassets.com/ekr/snippet.js?key=685f6dc4-48c5-411f-8463-cc6dd50abe2d"
-      ></ia-zendesk-help-widget>`, document.getElementById('root'));
+        widgetSrc="https://static.zdassets.com/ekr/snippet.js?key="
+        widgetkey="685f6dc4-48c5-411f-8463-cc6dd50abe2d"
+        ></ia-zendesk-help-widget>`, document.getElementById('root'));
     </script>
   </body>
 </html>
