Address suggestion and implement loader

--- a/packages/ia-zendesk-help-widget/index.html
+++ b/packages/ia-zendesk-help-widget/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="index.js"></script>
-    <title>Zenddesk Help Widget</title>
+    <title>ZenDesk Help Widget</title>
   </head>
   <body>
     <div id="root"></div>
@@ -12,8 +12,8 @@
       import { html, render } from './node_modules/lit-html/lit-html.js';
 
       render(html`<ia-zendesk-help-widget
-        widgetSrc="https://static.zdassets.com/ekr/snippet.js?key="
-        widgetkey="685f6dc4-48c5-411f-8463-cc6dd50abe2d"
+        widgetSrc="https://static.zdassets.com/ekr/snippet.js?key=685f6dc4-48c5-411f-8463-cc6dd50abe2d"
+        buttonVisible=true
         ></ia-zendesk-help-widget>`, document.getElementById('root'));
     </script>
   </body>
