--- a/packages/ia-wayback-search/index.html
+++ b/packages/ia-wayback-search/index.html
@@ -39,6 +39,7 @@
 
       render(html`<ia-wayback-search
         waybackPagesArchived="32 trillion pages"
+        .baseHost=${'archive.org'}
         .queryHandler=${queryHandler}
       ></ia-wayback-search>`, document.getElementById('root'));
 
