--- a/packages/ia-zendesk-help-widget/index.html
+++ b/packages/ia-zendesk-help-widget/index.html
@@ -13,7 +13,8 @@
 
       render(html`<ia-zendesk-help-widget
         widgetSrc="https://static.zdassets.com/ekr/snippet.js?key=685f6dc4-48c5-411f-8463-cc6dd50abe2d"
-        buttonVisible=true
+        buttonVisible="true"
+        isLoading="false"
         ></ia-zendesk-help-widget>`, document.getElementById('root'));
     </script>
   </body>
