--- a/packages/ia-details-action-button/index.html
+++ b/packages/ia-details-action-button/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="index.js"></script>
-    <title>Wayback Search</title>
+    <title>IA Details Page Action Button Search</title>
     <style>
       body {
         margin-top: 200px;
@@ -33,7 +33,7 @@
       render(html`
         <ia-details-action-button
           identifier="goody"
-          borrowButton="none"
+          borrowButton="radio"
           favoriteLink="/bookmarks.php?add_bookmark=1&med"
           isFavorited='false'
           collectionName="hellowork"
