emitted tracking events

--- a/packages/ia-zendesk-help-widget/index.html
+++ b/packages/ia-zendesk-help-widget/index.html
@@ -14,6 +14,12 @@
       render(html`<ia-zendesk-help-widget
         widgetSrc="https://static.zdassets.com/ekr/snippet.js?key=685f6dc4-48c5-411f-8463-cc6dd50abe2d"
         ></ia-zendesk-help-widget>`, document.getElementById('root'));
+
+      const zendeskButton = document.querySelector('ia-zendesk-help-widget');
+
+      zendeskButton.addEventListener('zendeskHelpButtonClicked', () => {
+        console.log('zendeskHelpButtonClicked event');
+      });
     </script>
   </body>
 </html>
