--- a/packages/ia-components/.storybook/preview-head.html
+++ b/packages/ia-components/.storybook/preview-head.html
@@ -2,17 +2,18 @@
 <script src="https://archive.org/includes/jquery-1.10.2.min.js?v1.10.2"></script>
 <script src="https://archive.org/includes/build/js/play8.min.js"></script>
 
-<script src="/BookReader/jquery-ui-1.12.0.min.js"></script>
-<script src="/BookReader/jquery.browser.min.js"></script>
-<script src="/BookReader/dragscrollable-br.js"></script>
-<script src="/BookReader/jquery.colorbox-min.js"></script>
-<script src="/BookReader/jquery.bt.min.js"></script>
-<script src="/BookReader/soundmanager/script/soundmanager2.js"></script>
-<script src="/BookReader/BookReader.js"></script>
-<!-- <script src="/BookReader/plugins/plugin.tts.js"></script> -->
-<!-- <script src="/BookReader/plugins/plugin.search.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/BookReader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/plugins/plugin.tts.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/plugin.search.js"></script>
 
-<link href="/BookReader/mmenu/dist/css/jquery.mmenu.css" rel="stylesheet" type="text/css"/>
-<link href="/BookReader/mmenu/dist/addons/navbars/jquery.mmenu.navbars.css" rel="stylesheet" type="text/css"/>
-<link href="/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery-ui-1.12.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/dragscrollable-br.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.colorbox-min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.bt.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/soundmanager2.js"></script>
+
+<link href="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
+
+<link href="https://archive.org/includes/build/css/archive.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://archive.org/bookreader/BookReader-ia.css" rel="stylesheet" type="text/css"/>
