--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -30,6 +30,12 @@
   </head>
 
   <body>
+    <!--
+      When passing in a search query through html attributes, base64 encode them.
+      This is not needed when setting the search query with lit-element bindings.
+    -->
+    <ia-topnav searchQuery="J2Zvbyc="></ia-topnav>
+
     <main>
       <h1>Site example</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -41,8 +47,10 @@
           <dd>
             <button id="show-logged-in-button">Show Logged-In State</button>
             <button id="show-logged-out-button">Show Logged-Out State</button>
+            <button id="is-admin-button">Is Admin</button>
+            <button id="is-not-admin-button">Is Not Admin</button> (admin only changes the logged-in user dropdown menu)
           </dd>
-          <dt>User</dt>
+          <dt>Base Host</dt>
           <dd>
             <form id="base-host-form">
               <input id="base-host" placeholder="https://foo.net"><input type="submit" value="Change Base Host">
@@ -55,44 +63,52 @@
             <form id="search-term-form">
               <input id="search-term"><input type="submit" value="Set Search Term">
             </form>
-            
-            </dd>
-            </dl>
+          </dd>
+        </dl>
       </fieldset>
     </main>
     <script type="module">
       import * as baseMenus from './src/data/menus.js';
 
-      function updateConfig(configOverrides) {
-        const config = Object.assign({
-          eventCategory: 'MobileTopNav',
-          waybackPagesArchived: '424 billion',
-          uploadURL: '/create',
-          hiddenSearchOptions: [],
-        }, configOverrides);
+      const topnav = document.querySelector('ia-topnav');
 
-        const menus = Object.assign({}, baseMenus, {
-          user: baseMenus.user({
-            catUrl: 'https://catalogd.archive.org',
-            identifier: 'foo',
-            uploader: 'bar-uploader@baz.org',
-            biblio: 'https://some-url.com',
-          }),
-          web: baseMenus.wayback,
-        });
+      function updateConfig({
+        eventCategory = 'MobileTopNav',
+        waybackPagesArchived = '424 billion',
+        uploadURL = '/create',
+        hiddenSearchOptions = []
+      } = {}) {
+        const config = {
+          eventCategory,
+          waybackPagesArchived,
+          uploadURL,
+          hiddenSearchOptions,
+        };
+        topnav.config = config;
+      }
 
-        const topnav = document.querySelector('ia-topnav');
-        Object.assign(topnav, {
-          baseHost: 'https://archive.org',
-          mediaBaseHost: 'https://archive.org',
-          config,
-          menus,
+      function updateMenus({
+        isAdmin = false,
+        catUrl = 'https://catalogd.archive.org',
+        identifier = 'foo',
+        uploader = 'bar-uploader@baz.org',
+        biblio = 'https://some-url.com',
+      } = {}) {
+        const menus = Object.assign({}, baseMenus);
+        menus.user = baseMenus.user({
+          isAdmin: isAdmin,
+          catUrl: 'https://catalogd.archive.org',
+          identifier: 'foo',
+          uploader: 'bar-uploader@baz.org',
+          biblio: 'https://some-url.com',
         });
       }
 
-      const topnav = document.createElement('ia-topnav');
-      document.body.insertBefore(topnav, document.body.firstChild);
+      menus.web = baseMenus.wayback;
+      topnav.menus = menus;
+
       updateConfig();
+      updateMenus();
 
       const loggedInButton = document.querySelector('#show-logged-in-button');
       loggedInButton.addEventListener('click', () => {
@@ -103,6 +119,16 @@
       const loggedOutButton = document.querySelector('#show-logged-out-button');
       loggedOutButton.addEventListener('click', () => {
         topnav.username = undefined;
+      })
+
+      const isAdminButton = document.querySelector('#is-admin-button');
+      isAdminButton.addEventListener('click', () => {
+        updateMenus({ isAdmin: true })
+      })
+
+      const isNotAdminButton = document.querySelector('#is-not-admin-button');
+      isNotAdminButton.addEventListener('click', () => {
+        updateMenus({ isAdmin: false })
       })
 
       const changeBaseHostForm = document.querySelector('#base-host-form');
