--- a/packages/ia-components/.storybook/preview-head.html
+++ b/packages/ia-components/.storybook/preview-head.html
@@ -2,18 +2,14 @@
 <script src="https://archive.org/includes/jquery-1.10.2.min.js?v1.10.2"></script>
 <script src="https://archive.org/includes/build/js/play8.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/BookReader.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/plugins/plugin.tts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/plugin.search.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/BookReader.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/plugins/plugin.tts.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/plugin.search.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery-ui-1.12.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.browser.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/dragscrollable-br.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.colorbox-min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.bt.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/soundmanager2.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/jquery.colorbox-min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/bookreader-template-bundle.js"></script>
 
-<link href="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
+<link href="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
 
 <link href="https://archive.org/includes/build/css/archive.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://archive.org/bookreader/BookReader-ia.css" rel="stylesheet" type="text/css"/>
