add new file path for component bundle

--- a/packages/ia-components/.storybook/preview-head.html
+++ b/packages/ia-components/.storybook/preview-head.html
@@ -8,6 +8,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/jquery.colorbox-min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/bookreader-template-bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/bookreader-component-bundle.js"></script>
 
 <link href="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
 
