iaux audio player with liner notes - use PB style item-nav loading & update styles to make it fit in small window

--- a/packages/ia-components/.storybook/preview-head.html
+++ b/packages/ia-components/.storybook/preview-head.html
@@ -13,3 +13,38 @@
 
 <link href="https://archive.org/includes/build/css/archive.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://archive.org/bookreader/BookReader-ia.css" rel="stylesheet" type="text/css"/>
+<style>
+  html {
+  --primaryBGColor: var(--black, #000);
+  --secondaryBGColor: #222;
+  --tertiaryBGColor: #333;
+  --primaryTextColor: var(--white, #fff);
+  --primaryCTAFill: #194880;
+  --primaryCTABorder: #c5d1df;
+  --secondaryCTAFill: #333;
+  --secondaryCTABorder: #999;
+  --primaryErrorCTAFill: #e51c26;
+  --primaryErrorCTABorder: #f8c6c8;
+}
+item-navigator {
+  display: block;
+  width: 100%;
+  color: var(--primaryTextColor);
+  --menuButtonLabelDisplay: block;
+  --menuWidth: 320px;
+  --menuSliderBg: var(--secondaryBGColor);
+  --activeButtonBg: var(--tertiaryBGColor);
+  --animationTiming: 100ms;
+  --iconFillColor: var(--primaryTextColor);
+  --iconStrokeColor: var(--primaryTextColor);
+  --menuSliderHeaderIconHeight: 2rem;
+  --menuSliderHeaderIconWidth: 2rem;
+  --iconWidth: 2.4rem;
+  --iconHeight: 2.4rem;
+  --shareLinkColor: var(--primaryTextColor);
+  --shareIconBorder: var(--primaryTextColor);
+  --shareIconBg: var(--secondaryBGColor);
+  --activityIndicatorLoadingDotColor: var(--primaryTextColor);
+  --activityIndicatorLoadingRingColor: var(--primaryTextColor);
+}
+</style>
