--- a/packages/ia-components/.storybook/preview-head.html
+++ b/packages/ia-components/.storybook/preview-head.html
@@ -2,17 +2,20 @@
 <script src="https://archive.org/includes/jquery-1.10.2.min.js?v1.10.2"></script>
 <script src="https://archive.org/includes/build/js/play8.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/BookReader.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/plugins/plugin.tts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/plugin.search.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/jquery.colorbox-min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/bookreader-component-bundle.js"></script>
+<script src="https://archive.org/bookreader/BookReader/BookReader.js"></script>
+<script src="https://archive.org/bookreader/BookReader/plugins/plugin.tts.js"></script>
+<script src="https://archive.org/bookreader/BookReader/plugin.search.js"></script>
 
-<link href="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@next/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
+<script src="https://archive.org/bookreader/BookReader/jquery.colorbox-min.js"></script>
+
+<link href="https://archive.org/bookreader/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
 
 <link href="https://archive.org/includes/build/css/archive.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://archive.org/bookreader/BookReader-ia.css" rel="stylesheet" type="text/css"/>
+
+<script src="https://archive.org/includes/build/js/BookNavigator.min.js"></script>
+
 <style>
   html {
   --primaryBGColor: var(--black, #000);
