--- a/packages/ia-components/.storybook/preview-head.html
+++ b/packages/ia-components/.storybook/preview-head.html
@@ -2,18 +2,52 @@
 <script src="https://archive.org/includes/jquery-1.10.2.min.js?v1.10.2"></script>
 <script src="https://archive.org/includes/build/js/play8.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/BookReader.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/plugins/plugin.tts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/plugin.search.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery-ui-1.12.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.browser.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/dragscrollable-br.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.colorbox-min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/jquery.bt.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/soundmanager2.js"></script>
+<script src="https://archive.org/bookreader/BookReader/BookReader.js"></script>
+<script src="https://archive.org/bookreader/BookReader/plugins/plugin.tts.js"></script>
+<script src="https://archive.org/bookreader/BookReader/plugin.search.js"></script>
 
-<link href="https://cdn.jsdelivr.net/npm/@internetarchive/bookreader@latest/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
+<script src="https://archive.org/bookreader/BookReader/jquery.colorbox-min.js"></script>
+
+<link href="https://archive.org/bookreader/BookReader/BookReader.css" rel="stylesheet" type="text/css"/>
 
 <link href="https://archive.org/includes/build/css/archive.min.css" rel="stylesheet" type="text/css"/>
 <link href="https://archive.org/bookreader/BookReader-ia.css" rel="stylesheet" type="text/css"/>
+
+<script src="https://archive.org/includes/build/js/BookNavigator.min.js"></script>
+
+<style>
+  html {
+  --primaryBGColor: var(--black, #000);
+  --secondaryBGColor: #222;
+  --tertiaryBGColor: #333;
+  --primaryTextColor: var(--white, #fff);
+  --primaryCTAFill: #194880;
+  --primaryCTABorder: #c5d1df;
+  --secondaryCTAFill: #333;
+  --secondaryCTABorder: #999;
+  --primaryErrorCTAFill: #e51c26;
+  --primaryErrorCTABorder: #f8c6c8;
+}
+item-navigator {
+  display: block;
+  width: 100%;
+  color: var(--primaryTextColor);
+  --menuButtonLabelDisplay: block;
+  --menuWidth: 320px;
+  --menuSliderBg: var(--secondaryBGColor);
+  --activeButtonBg: var(--tertiaryBGColor);
+  --animationTiming: 100ms;
+  --iconFillColor: var(--primaryTextColor);
+  --iconStrokeColor: var(--primaryTextColor);
+  --menuSliderHeaderIconHeight: 2rem;
+  --menuSliderHeaderIconWidth: 2rem;
+  --iconWidth: 2.4rem;
+  --iconHeight: 2.4rem;
+  --shareLinkColor: var(--primaryTextColor);
+  --shareIconBorder: var(--primaryTextColor);
+  --shareIconBg: var(--secondaryBGColor);
+  --activityIndicatorLoadingDotColor: var(--primaryTextColor);
+  --activityIndicatorLoadingRingColor: var(--primaryTextColor);
+}
+</style>
