--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -20,74 +20,138 @@
         --activeColor: #fff;
         --activeSearchColor: #222;
       }
+      legend {
+        font-size: 1.6rem;
+      }
+      dt {
+        font-size: 1.4rem;
+      }
     </style>
   </head>
 
   <body>
+    <!--
+      When passing in a search query through html attributes, base64 encode them.
+      This is not needed when setting the search query with lit-element bindings.
+    -->
+    <ia-topnav searchQuery="J2Zvbyc="></ia-topnav>
+
     <main>
       <h1>Site example</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
       <fieldset>
         <legend>Dev Tools</legend>
-        <button id="show-logged-in-button">Show Logged-In State</button> |
-        <button id="show-logged-out-button">Show Logged-Out State</button>
-        <button id="change-base-host">Change Base Host</button>
+        <dl>
+          <dt>User</dt>
+          <dd>
+            <button id="show-logged-in-button">Show Logged-In State</button>
+            <button id="show-logged-out-button">Show Logged-Out State</button>
+            <button id="is-admin-button">Is Admin</button>
+            <button id="is-not-admin-button">Is Not Admin</button> (admin only changes the logged-in user dropdown menu)
+          </dd>
+          <dt>Base Host</dt>
+          <dd>
+            <form id="base-host-form">
+              <input id="base-host" placeholder="https://foo.net"><input type="submit" value="Change Base Host">
+            </form>
+          </dd>
+          <dt>Search</dt>
+          <dd>
+            <button id="show-search">Show Search</button>
+            <button id="hide-search">Hide Search</button>
+            <form id="search-term-form">
+              <input id="search-term"><input type="submit" value="Set Search Term">
+            </form>
+          </dd>
+        </dl>
       </fieldset>
     </main>
     <script type="module">
       import * as baseMenus from './src/data/menus.js';
 
-      function updateConfig(configOverrides) {
-        const config = Object.assign({
-          screenName: 'really_long_screen_name_that_may_be_truncated_on_mobile',
-          username: 'fooey_mcbarrison',
-          eventCategory: 'MobileTopNav',
-          waybackPagesArchived: '424 billion',
-          isAdmin: true,
-          uploadURL: '/create',
-          searchQuery: 'atari',
-          hiddenSearchOptions: [],
-        }, configOverrides);
+      const topnav = document.querySelector('ia-topnav');
 
-        const menus = Object.assign({}, baseMenus, {
-          user: baseMenus.user({
-            catUrl: 'https://catalogd.archive.org',
-            username: config.username,
-            isAdmin: config.isAdmin,
-            identifier: 'foo',
-            uploader: 'bar-uploader@baz.org',
-            biblio: 'https://some-url.com',
-          }),
-          web: baseMenus.wayback,
-        });
-
-        const topnav = document.querySelector('ia-topnav');
-        Object.assign(topnav, {
-          baseHost: 'https://archive.org',
-          config,
-          menus,
-        });
+      function updateConfig({
+        eventCategory = 'MobileTopNav',
+        waybackPagesArchived = '424 billion',
+        uploadURL = '/create',
+        hiddenSearchOptions = []
+      } = {}) {
+        const config = {
+          eventCategory,
+          waybackPagesArchived,
+          uploadURL,
+          hiddenSearchOptions,
+        };
+        topnav.config = config;
       }
+
+      function updateMenus({
+        isAdmin = false,
+        catUrl = 'https://catalogd.archive.org',
+        identifier = 'foo',
+        uploader = 'bar-uploader@baz.org',
+        biblio = 'https://some-url.com',
+      } = {}) {
+        const menus = Object.assign({}, baseMenus);
+        menus.user = baseMenus.user({
+          isAdmin: isAdmin,
+          catUrl: 'https://catalogd.archive.org',
+          identifier: 'foo',
+          uploader: 'bar-uploader@baz.org',
+          biblio: 'https://some-url.com',
+        });
+        menus.web = baseMenus.wayback;
+        topnav.menus = menus;
+      }
+
+      updateConfig();
+      updateMenus();
 
       const loggedInButton = document.querySelector('#show-logged-in-button');
       loggedInButton.addEventListener('click', () => {
-        updateConfig();
+        topnav.username = 'fooey_mcbarrison';
+        topnav.screenName = 'really_long_screen_name_that_may_be_truncated_on_mobile';
       })
 
       const loggedOutButton = document.querySelector('#show-logged-out-button');
       loggedOutButton.addEventListener('click', () => {
-        updateConfig({ username: undefined, isAdmin: false });
+        topnav.username = undefined;
       })
 
-      const topnav = document.createElement('ia-topnav');
-      document.body.insertBefore(topnav, document.body.firstChild);
+      const isAdminButton = document.querySelector('#is-admin-button');
+      isAdminButton.addEventListener('click', () => {
+        updateMenus({ isAdmin: true })
+      })
 
-      updateConfig();
+      const isNotAdminButton = document.querySelector('#is-not-admin-button');
+      isNotAdminButton.addEventListener('click', () => {
+        updateMenus({ isAdmin: false })
+      })
 
-      const changeBaseHostButton = document.querySelector('#change-base-host');
-      changeBaseHostButton.addEventListener('click', () => {
-        topnav.baseHost = 'https://foo.net';
+      const changeBaseHostForm = document.querySelector('#base-host-form');
+      changeBaseHostForm.addEventListener('submit', (e) => {
+        e.preventDefault();
+        const baseHost = document.querySelector('#base-host');
+        topnav.baseHost = baseHost.value;
+      })
+
+      const showSearchButton = document.querySelector('#show-search');
+      showSearchButton.addEventListener('click', () => {
+        topnav.hideSearch = false;
+      })
+
+      const hideSearchButton = document.querySelector('#hide-search');
+      hideSearchButton.addEventListener('click', () => {
+        topnav.hideSearch = true;
+      })
+
+      const searchTermButton = document.querySelector('#search-term-form');
+      searchTermButton.addEventListener('submit', (e) => {
+        e.preventDefault();
+        const searchTermInput = document.querySelector('#search-term');
+        topnav.searchQuery = searchTermInput.value;
       })
 
       topnav.addEventListener('trackClick', ({ detail }) => {
