Add new property to render user avatar

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -112,6 +112,7 @@
       const loggedInButton = document.querySelector('#show-logged-in-button');
       loggedInButton.addEventListener('click', () => {
         topnav.username = 'fooey_mcbarrison';
+        topnav.userAvatar = '/services/img/user/profile?2342424324';
         topnav.screenName = 'really_long_screen_name_that_may_be_truncated_on_mobile';
       })
 
