re-add wordmark

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -49,7 +49,7 @@
     -->
     <ia-topnav searchQuery="J2Zvbyc=">
       <div slot="opt-sec-logo">
-        <a class="anniv-logo-link" href="https://archvive.org" title="Go to cool page" slot="opt-sec-logo">
+        <a class="anniv-logo-link" href="https://archvive.org" title="Go to cool page">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114.6 36.87">
             <defs>
               <style>.cls-1{fill:#fff;}</style>
