clean up demo css

--- a/packages/ia-topnav/index.html
+++ b/packages/ia-topnav/index.html
@@ -27,8 +27,7 @@
         font-size: 1.4rem;
       }
 
-      .anniv-logo-link,
-      .link-home {
+      .anniv-logo-link {
         display: flex;
         justify-content: center;
         align-items: center;
